--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -42,9 +42,10 @@ a:hover {
   background-image: linear-gradient(
     135deg,
     $primary-color 0%,
-    $secondary-color 100%
+    $secondary-color 40%
   );
   -webkit-background-clip: text;
+  background-clip: text;
   -webkit-text-fill-color: transparent;
 
   // Responsive text purple style
