--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -6,7 +6,7 @@
   border-bottom: 0px;
   background: $white-color;
   font-weight: 400;
-  color: $dark-blue-text;
+  color: $white-color;
   padding: 0rem 5.6rem;
   margin-bottom: 0;
   top: 0;
@@ -15,11 +15,19 @@
   right: 0;
   z-index: -1;
 
-  // If you want to set a background image on the hero section, uncomment these with yout custom image
-
   /* background: url("/src/assets/[your-image].png");
   background-position: center;
   background-size: cover; */
+
+  background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.8)), url("/src/assets/laptop-img.jpeg") center no-repeat;
+    // width: 100%;
+    // height: 100vh; /*Sets the height of the background image.*/
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-position: center;
+  background-size: cover;
+
 
   @include respond(phone) {
     padding: 0rem $default-font-size;
