--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -19,7 +19,7 @@
   background-position: center;
   background-size: cover; */
 
-  background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.8)), url("/src/assets/laptop-img.jpeg") center no-repeat;
+  background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.4)), url("/src/assets/new-lappy-img.png") center no-repeat;
     // width: 100%;
     // height: 100vh; /*Sets the height of the background image.*/
   -webkit-background-size: cover;
