Changed the img directory

--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -17,7 +17,7 @@
 
   // background: darkslategrey;
 
-  background: linear-gradient(to bottom, rgba(0,0,0,.9), rgba(0,0,0,.1)),  url("/assets/new-lappy-img.png") center no-repeat;
+  background: linear-gradient(to bottom, rgba(0,0,0,.9), rgba(0,0,0,.1)),  url("../../../src/assets/new-lappy-img.png") center no-repeat;
     // width: 100%;
     // height: 100vh; /*Sets the height of the background image.*/
   -webkit-background-size: cover;
