--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -15,16 +15,16 @@
   right: 0;
   z-index: -1;
 
-  // background: darkslategrey;
+  background: url("../../../assets/new-lappy-img.png");
 
-  background: linear-gradient(to bottom, rgba(0,0,0,.9), rgba(0,0,0,.1)),  url("./assets/new-lappy-img.png") center no-repeat;
+  //background: linear-gradient(to bottom, rgba(0,0,0,.9), rgba(0,0,0,.1)),  url("./assets/new-lappy-img.png") center no-repeat;
     // width: 100%;
     // height: 100vh; /*Sets the height of the background image.*/
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-position: center;
-  background-size: cover;
+ // -webkit-background-size: cover;
+ // -moz-background-size: cover;
+ // -o-background-size: cover;
+ // background-position: center;
+//  background-size: cover;
 
 
   @include respond(phone) {
