--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -15,7 +15,7 @@
   right: 0;
   z-index: -1;
 
-  background: url("../../../assets/new-lappy-img.png");
+  background: url("./assets/new-lappy-img.png");
 
   //background: linear-gradient(to bottom, rgba(0,0,0,.9), rgba(0,0,0,.1)),  url("./assets/new-lappy-img.png") center no-repeat;
     // width: 100%;
