--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -15,18 +15,18 @@
   right: 0;
   z-index: -1;
 
-  /* background: url("/src/assets/[your-image].png");
+  background: url("/src/assets/laptop-img.jpeg");
   background-position: center;
-  background-size: cover; */
+  background-size: cover; 
 
-  background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.4)), url("/src/assets/new-lappy-img.png") center no-repeat;
+  // background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.4)), url("/src/assets/new-lappy-img.png") center no-repeat;
     // width: 100%;
     // height: 100vh; /*Sets the height of the background image.*/
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-position: center;
-  background-size: cover;
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // -o-background-size: cover;
+  // background-position: center;
+  // background-size: cover;
 
 
   @include respond(phone) {
