--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -1,6 +1,6 @@
 #hero {
-  min-height: 180%;
-  height: 110%;
+  min-height: 100vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   border-bottom: 0px;
@@ -15,9 +15,9 @@
   right: 0;
   z-index: -1;
 
-  background-image: url("/src/assets/laptop-img.jpeg");
-  background-position: center;
-  background-size: cover; 
+  // background: url("/src/assets/laptop-img.jpeg");
+  // background-position: center;
+  // background-size: cover; 
 
   // background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.4)), url("/src/assets/new-lappy-img.png") center no-repeat;
     // width: 100%;
