--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -15,11 +15,11 @@
   right: 0;
   z-index: -1;
 
-  // background: url("/src/assets/laptop-img.jpeg");
-  // background-position: center;
-  // background-size: cover; 
+  background: url("/src/assets/project.jpg");
+  background-position: center;
+  background-size: cover; 
 
-  // background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.4)), url("/src/assets/new-lappy-img.png") center no-repeat;
+  // background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.6)), url("/src/assets/project.jpg") center no-repeat;
     // width: 100%;
     // height: 100vh; /*Sets the height of the background image.*/
   // -webkit-background-size: cover;
