--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -15,18 +15,16 @@
   right: 0;
   z-index: -1;
 
-  background: url("/src/assets/project.jpg");
-  background-position: center;
-  background-size: cover; 
+  // background: darkslategrey;
 
-  // background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.6)), url("/src/assets/project.jpg") center no-repeat;
+  background: linear-gradient(to bottom, rgba(0,0,0,.9), rgba(0,0,0,.1)),  darkslategrey center no-repeat;
     // width: 100%;
     // height: 100vh; /*Sets the height of the background image.*/
-  // -webkit-background-size: cover;
-  // -moz-background-size: cover;
-  // -o-background-size: cover;
-  // background-position: center;
-  // background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-position: center;
+  background-size: cover;
 
 
   @include respond(phone) {
