--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -15,16 +15,20 @@
   right: 0;
   z-index: -1;
 
-  // background: url("./assets/new-lappy-img.png");
+//   // background: url("./assets/new-lappy-img.png");
 
-  background: linear-gradient(to bottom, rgba(0,0,0,.9), rgba(0,0,0,.9)),  url("/src/assets/new-small-size-img.jpg") center no-repeat;
-    // width: 100%;
-    // height: 100vh; /*Sets the height of the background image.*/
- -webkit-background-size: cover;
- -moz-background-size: cover;
- -o-background-size: cover;
- background-position: center;
- background-size: cover;
+//   background: linear-gradient(to bottom, rgba(0,0,0,.9), rgba(0,0,0,.9)),  url("/src/assets/new-small-size-img.jpg") center no-repeat;
+//     // width: 100%;
+//     // height: 100vh; /*Sets the height of the background image.*/
+//  -webkit-background-size: cover;
+//  -moz-background-size: cover;
+//  -o-background-size: cover;
+//  background-position: center;
+//  background-size: cover;
+
+  background: url("/src/assets/new-small-size-img.jpg");
+  background-position: center;
+  background-size: cover; 
 
 
   @include respond(phone) {
