--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -15,6 +15,11 @@
   right: 0;
   z-index: -1;
 
+  // background: url(../img/background.jpg);
+  background: url(../assets/new-small-size-img.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+
 //   // background: url("./assets/new-lappy-img.png");
 
 //   background: linear-gradient(to bottom, rgba(0,0,0,.9), rgba(0,0,0,.9)),  url("/src/assets/new-small-size-img.jpg") center no-repeat;
@@ -26,9 +31,9 @@
 //  background-position: center;
 //  background-size: cover;
 
-  background: url("/src/assets/new-small-size-img.jpg");
-  background-position: center;
-  background-size: cover; 
+  // background: url("/src/assets/new-small-size-img.jpg");
+  // background-position: center;
+  // background-size: cover; 
 
 
   @include respond(phone) {
