--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -16,7 +16,8 @@
   z-index: -1;
 
   // background: url(../img/background.jpg);
-  background: url(../assets/new-small-size-img.jpg);
+  // background: url(../assets/background.jpg);
+  background: linear-gradient(to bottom, rgba(0,0,0,1.0), rgba(0,0,0,.5)),  url(../assets/background.jpg) center no-repeat;
   background-attachment: fixed;
   background-size: cover;
 
@@ -77,4 +78,13 @@
       }
     }
   }
-}
+}#hero:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background: rgba(68, 68, 68, 0.9); }
+
