--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -78,13 +78,5 @@
       }
     }
   }
-}#hero:after {
-  content: '';
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background: rgba(68, 68, 68, 0.9); }
+}
 
