--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -17,7 +17,7 @@
 
   // background: url(../img/background.jpg);
   // background: url(../assets/background.jpg);
-  background: linear-gradient(to bottom, rgba(0,0,0,1.0), rgba(0,0,0,.5)),  url(../assets/background.jpg) center no-repeat;
+  background: linear-gradient(to bottom, rgba(0,0,0,.9), rgba(0,0,0,.7)),  url(../assets/background.jpg) center no-repeat;
   background-attachment: fixed;
   background-size: cover;
 
