--- a/src/style/sections/_hero.scss
+++ b/src/style/sections/_hero.scss
@@ -35,7 +35,10 @@
   // background: url("/src/assets/new-small-size-img.jpg");
   // background-position: center;
   // background-size: cover; 
+.project-img{
+  border: 4px solid red;
 
+}
 
   @include respond(phone) {
     padding: 0rem $default-font-size;
